--- a/01.EuclidsGCD/ReadMe
+++ b/01.EuclidsGCD/ReadMe
@@ -1,2 +1,1 @@
-Write a program for finding the Greatest Common Divisor (GCD) of two numbers 
-using Euclid’s algorithm. 
+Write a program for finding the Greatest Common Divisor (GCD) of two numbers using Euclid’s algorithm. 
